@@ -8,12 +8,14 @@ KC_LEFT = 2
 KC_RIGHT = 3
 KC_OK = 4
 KC_ESC = 5
+KC_P = 6
 REG_KEY(0, KC_UP, 72)
 REG_KEY(0, KC_DOWN, 80)
 REG_KEY(0, KC_LEFT, 75)
 REG_KEY(0, KC_RIGHT, 77)
 REG_KEY(0, KC_OK, 13)
 REG_KEY(0, KC_ESC, 27)
+REG_KEY(0, KC_P, 112)
 
 AHAT_LOGO = 0
 AHAT_TICK = 1
