@@ -1,7 +1,7 @@
 count: 12
 width: 3
 height: 4
-rate: 3
+rate: 6
 
 @normal
  O 
